web-infras/parser/tests/fixtures/babel/es2022/class-private-properties/undeclared-top-level/output.txt
[SyntaxError]: Unexpected '#' used outside of class body (1,16)
1|var prop = foo.#priv;
 |              ^
